--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
 baseURL = "https://jcheng1203.github.io/pub-tips/"
 languageCode = "en-us"
-title = "Jenny Cheng"
+title = "Publications Tips & Tricks"
