--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
 baseURL = "https://jcheng1203.github.io/pub-tips/"
 languageCode = "en-us"
 title = "Publications Tips & Tricks"
+sectionPagesMenu = "main"
