Creating new netlify branch.

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://jcheng1203.github.io/pub-tips/"
+baseURL = "https://stupefied-einstein-200a4d.netlify.com/pub-tips/"
 languageCode = "en-us"
 title = "Publications Tips & Tricks"
 sectionPagesMenu = "main"
