Getting it ready for deployment.

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://jcheng1203.github.io/pub-tips/"
+baseURL = "https://pub-tips.chenglinks.com/"
 languageCode = "en-us"
 title = "Publications Tips & Tricks"
 sectionPagesMenu = "main"
