Fixed ugly tag colors (issue #11) and renamed Photoshop 101 to Publications 101 (issue #15).

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ summaryLength = 20
 [menu]
 	[[menu.main]]
 		identifier = "lessons"
-		name = "Photoshop 101"
+		name = "Publications 101"
 		url = "/lessons/"
 		weight = 1
 
